--- a/gui-tavares-client/package.json
+++ b/gui-tavares-client/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-burger-menu": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.9.3",
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^7.0.2",
     "react-star-rating": "^1.4.2",
