--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
+    "axios": "^1.7.9",
     "cors": "^2.8.5",
+    "email-js": "^2.0.3",
+    "emailjs-com": "^3.2.0",
     "hamburger-react": "^2.5.1",
     "react": "^18.3.1",
     "react-burger-menu": "^3.1.0",
@@ -22,7 +25,8 @@
     "react-router-dom": "^7.0.2",
     "react-star-rating": "^1.4.2",
     "sass": "^1.83.0",
-    "sass-loader": "^16.0.4"
+    "sass-loader": "^16.0.4",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
