--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@lottiefiles/dotlottie-react": "^0.12.0",
     "@stripe/react-stripe-js": "^3.1.1",
     "@stripe/stripe-js": "^5.3.0",
+    "@vercel/analytics": "^1.5.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "email-js": "^2.0.3",
